--- a/loops/simple_loops.html
+++ b/loops/simple_loops.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link type="text/css" href="../style.css" rel="stylesheet" />
   </head>
   <body>
-    <div> Task with loops </div>
+    <h1> Task with loops </h1>
     <div class="task">
       <div class="task__condition">
-        <div > #1 task</div>
+        <h2 > #1 task</h2>
         <div>Write a loop that makes seven console.log  calls and displays the following 
           triangle:<br> 
           # <br>
@@ -20,14 +21,14 @@
       </div>
 
       <div class="task__result">
-        <div >Result</div>
-        <div> See in Console</div>
+        <h3 >Result</h3>
+        <div> See in Console, Press F12</div>
       </div>
     </div>
 
     <div class="task">
       <div class="task__condition">
-        <div > #2 task</div>
+        <h2 > #2 task</h2>
         <div>Write a program in which using the console.log output all numbers
           from 1 to 100 with two exceptions. For numbers that are multiples of 3, instead of a number
           "Fizz" is displayed, and for numbers that are multiples of 5 (but not 3), "Buzz".
@@ -39,14 +40,14 @@
       </div>
 
       <div class="task__result">
-        <div >Result</div>
-        <div> See in Console</div>
+        <h3 >Result</h3>
+        <div> See in Console, Press F12</div>
       </div>
     </div>
 
     <div class="task">
       <div class="task__condition">
-        <div > #3 task</div>
+        <h2 > #3 task</h2>
         <div>Write a program that creates a string representing an 8 x 8 grid,
           using newline characters to separate lines. In every position
           the grid is either a space or the "#" symbol. These symbols must be located
@@ -68,8 +69,8 @@
       </div>
 
       <div class="task__result">
-        <div >Result</div>
-        <div> See in Console</div>
+        <h3 >Result</h3>
+        <div> See in Console, Press F12</div>
       </div>
     </div>
 
