--- a/loops/simple_loops.html
+++ b/loops/simple_loops.html
@@ -4,6 +4,7 @@
     <link type="text/css" href="../style.css" rel="stylesheet" />
   </head>
   <body>
+    <div><a href="../main.html">Homepage</a></div>
     <h1> Task with loops </h1>
     <div class="task">
       <div class="task__condition">
