--- a/main.html
+++ b/main.html
@@ -3,9 +3,9 @@
 	<head>
 	</head>
 	<body>
-		<div> This page is for my homework with JS tasks </div>
+		<h1> This page is for my homework with JS tasks </h1>
 
-		<div> First tasks - loops <a href="./loops/simple_loops.html">open...</div>
+		<h2> #1 - Loops <a href="./loops/simple_loops.html">go to the page...</h2>
 	</body>
 	<script src="test.js"></script>
 </html>
