--- a/loops/simple_loops.html
+++ b/loops/simple_loops.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div><a href="../main.html">Homepage</a></div>
-    <h1> Task with loops </h1>
+    <h1> Tasks with loops </h1>
     <div class="task">
       <div class="task__condition">
         <h2 > #1 task</h2>
