--- a/main.html
+++ b/main.html
@@ -5,7 +5,9 @@
 	<body>
 		<h1> This page is for my homework with JS tasks </h1>
 
-		<h2> #1 - Loops <a href="./loops/simple_loops.html">go to the page...</h2>
+		<h2> #1 - Loops <a href="./loops/simple_loops.html">go to the page...</a></h2>
+		<hr>
+		<h2> #2 - Functions <a href="./functions/tasks_function.html">go to the page...</a></h2>
 	</body>
 	<script src="test.js"></script>
 </html>
