--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 		<h2> #1 - Loops <a href="./loops/simple_loops.html">go to the page...</a></h2>
 		<hr>
 		<h2> #2 - Functions <a href="./functions/tasks_function.html">go to the page...</a></h2>
+		<hr>
+		<h2> #3 - Objects and Arrays <a href="./objects/tasks_objects.html">go to the page...</a></h2>
 	</body>
 	<script src="test.js"></script>
 </html>
