--- a/objects/tasks_objects.html
+++ b/objects/tasks_objects.html
@@ -30,12 +30,9 @@
       <div class="task__condition">
         <h2 > #2 task</h2>
         <div>The array is in reverse order. Arrays have a reverse method, which changes the order 
-          of the elements in the array. To perform this exercise, write two functions: reverseArray 
-          and reverseArrayinPlace. The first function, reverseArray, accepts an array as an argument 
-          and creates a new array containing the same elements in reverse order. The second, 
-          reverseArrayinPlace, does the same thing as the reverse method: it transforms the array
-           given as an argument, changing the order of its elements to reverse. Do not use 
-           the standard reverse method for this.
+          of the elements in the array. To perform this exercise, write functions: reverseArray, which 
+          accepts an array as an argument and creates a new array containing the same elements in reverse order.
+           Do not use  the standard reverse method for this.
         </div>
       </div>
 
