--- a/main.html
+++ b/main.html
@@ -3,13 +3,16 @@
 	<head>
 	</head>
 	<body>
-		<h1> This page is for my homework with JS tasks </h1>
-
-		<h2> #1 - Loops <a href="./loops/simple_loops.html">go to the page...</a></h2>
+		<h1> This page is for my homework with JS tasks</h1>
 		<hr>
-		<h2> #2 - Functions <a href="./functions/tasks_function.html">go to the page...</a></h2>
+		<h2> #1 - Simple tasks</h2>
+		<ul>
+			<li><h2><a href="./loops/simple_loops.html">Loops</a></h2></li>
+			<li><h2><a href="./functions/tasks_function.html">Functions</a></h2></li>
+			<li><h2><a href="./objects/tasks_objects.html">Objects and Arrays</a></h2></li>
+		</ul>
 		<hr>
-		<h2> #3 - Objects and Arrays <a href="./objects/tasks_objects.html">go to the page...</a></h2>
+		<h2> #2 - Project <a href="./my_vocabulary-js/vocabulary.html">My vocabulary</a></h2>
 	</body>
 	<script src="test.js"></script>
 </html>
