--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 		<hr>
 		<h2> #1 - Simple tasks</h2>
 		<ul>
-			<li><h2><a href="./loops/simple_loops.html">Loops</a></h2></li>
-			<li><h2><a href="./functions/tasks_function.html">Functions</a></h2></li>
-			<li><h2><a href="./objects/tasks_objects.html">Objects and Arrays</a></h2></li>
+			<li><h2><a href="./simple_tasks/loops/simple_loops.html">Loops</a></h2></li>
+			<li><h2><a href="./simple_tasks/functions/tasks_function.html">Functions</a></h2></li>
+			<li><h2><a href="./simple_tasks/objects/tasks_objects.html">Objects and Arrays</a></h2></li>
 		</ul>
 		<hr>
-		<h2> #2 - Project <a href="./my_vocabulary-js/vocabulary.html">My vocabulary</a></h2>
+		<h2> #2 - Project <a href="./my_vocabulary/vocabulary.html">My vocabulary</a></h2>
 	</body>
 	<script src="test.js"></script>
 </html>
