--- a/my_vocabulary/vocabulary.html
+++ b/my_vocabulary/vocabulary.html
@@ -22,6 +22,8 @@
         <div class="button-add">Add</div>
       </div>
 
+      <div><a href="../main.html">Homepage</a></div>
+
       <div class="table-wrapper">
         <h2>Saved words</h2>
         <table class="table-words">
