method fetch - work with server

--- a/main.html
+++ b/main.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8" />
+		<title>My JS tasks and projects</title>
 	</head>
 	<body>
-		<h1> This page is for my homework with JS tasks</h1>
+		<h1> This page is for my JS tasks and projects</h1>
 		<hr>
 		<h2> #1 - Simple tasks</h2>
 		<ul>
@@ -13,6 +15,7 @@
 		</ul>
 		<hr>
 		<h2> #2 - Project <a href="./my_vocabulary/vocabulary.html">My vocabulary</a></h2>
+		<hr>
+		<h2> #3 - Project <a href="./work_with_server_fetch/mainS.html">Work with server- method fetch</a></h2>
 	</body>
-	<script src="test.js"></script>
 </html>
