css generator (generate border-radius)

--- a/main.html
+++ b/main.html
@@ -17,5 +17,7 @@
 		<h2> #2 - Project <a href="./my_vocabulary/vocabulary.html">My vocabulary</a></h2>
 		<hr>
 		<h2> #3 - Project <a href="./work_with_server_fetch/mainS.html">Work with server- method fetch</a></h2>
+		<hr>
+		<h2> #4 - Project <a href="./css_generator/index.html">CSS generator</a></h2>
 	</body>
 </html>
