tic-tac-toe game

--- a/main.html
+++ b/main.html
@@ -19,5 +19,7 @@
 		<h2> #3 - Project <a href="./work_with_server_fetch/mainS.html">Work with server- method fetch</a></h2>
 		<hr>
 		<h2> #4 - Project <a href="./css_generator/index.html">CSS generator</a></h2>
+		<hr>
+		<h2> #5 - Project <a href="./tic-tac-toe game/index.html">Tic-tac-toe game</a></h2>
 	</body>
 </html>
