--- a/main.html
+++ b/main.html
@@ -21,5 +21,7 @@
 		<h2> #4 - Project <a href="./css_generator/index.html">CSS generator</a></h2>
 		<hr>
 		<h2> #5 - Project <a href="./tic-tac-toe game/index.html">Tic-tac-toe game</a></h2>
+		<hr>
+		<h2> #6 - Project <a href="./my_slider/index.html">My slider</a></h2>
 	</body>
 </html>
