--- a/main.html
+++ b/main.html
@@ -23,5 +23,7 @@
 		<h2> #5 - Project <a href="./tic-tac-toe game/index.html">Tic-tac-toe game</a></h2>
 		<hr>
 		<h2> #6 - Project <a href="./my_slider/index.html">My slider</a></h2>
+		<hr>
+		<h2> #7 - Project <a href="./pizza_constructor/index.html">Pizza constructor</a></h2>
 	</body>
 </html>
