--- a/pizza_constructor/index.html
+++ b/pizza_constructor/index.html
@@ -2,178 +2,172 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<link rel="apple-touch-icon" href="img/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/plugins/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <link rel="apple-touch-icon" href="img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="css/plugins/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="row creator-pizza">
-			<div class="col-10">
-				<h2>Pizza constructor</h2>
-				<div class="row">
-					<div class="col-3 creator-pizza-left">
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Beef
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Salami
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Becon
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Mushrooms
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Chicken
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-					</div>
-					<div class="col-6 creator-pizza-center">
-						<div class="current-pizza">
-							<div class="current-pizza-item dough"></div>
-							<div class="current-pizza-item base"></div>
-							<div class="current-pizza-item beef"></div>
-							<div class="current-pizza-item salami"></div>
-							<div class="current-pizza-item bekon"></div>
-							<div class="current-pizza-item mushrooms"></div>
-							<div class="current-pizza-item chiken"></div>
-							<div class="current-pizza-item mozzarella"></div>
-							<div class="current-pizza-item pineapple"></div>
-							<div class="current-pizza-item pepper"></div>
-							<div class="current-pizza-item tomato"></div>
-							<div class="current-pizza-item olives"></div>
-						</div>
-					</div>
-					<div class="col-3 creator-pizza-right">
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Mozzarella
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Pineapple
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Pepper
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Tomato
-								<input type="checkbox"><span class="checkmark"></span>
-							</label>
-						</div>
-						<div class="topping-item">
-							<label class="container-custom-checkbox">Olives
-								<input type="checkbox"><span class="checkmark"> </span>
-							</label>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="select-drink-wrapper">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-12">
-					<div class="flex-wrapper">
-						<div class="select-drink-item" data-name="cola classic">
-							<img src="img/drinks/cola.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item active" data-name="cola zero">
-							<img src="img/drinks/cola_zero.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="sprite">
-							<img src="img/drinks/sprite.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="fanta">
-							<img src="img/drinks/fanta.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea green">
-							<img src="img/drinks/fuzetea_green.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea black">
-							<img src="img/drinks/fuzetea_black.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="fuzetea orange">
-							<img src="img/drinks/fuzetea_orange.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="pulpy">
-							<img src="img/drinks/pulpy.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-						<div class="select-drink-item" data-name="water">
-							<img src="img/drinks/water.png">
-							<div class="volume">0.5</div>
-							<div class="summa">1.99$</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row option-delivery">
-			<div class="col-4"></div>
-			<div class="col-4"></div>
-			<div class="col-4">
-				<div class="option-delivery-right">
-					<div class="total-amount"><span class="text">You pay:</span><span class="summa">6.99$</span>
-					</div>
-					<button class="typical-btn make-an-order">Make an order</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="modal-window none">
-		<div class="modal-window__content">
-			<p class="modal-window__subject">
-				<span class="modal-window__ingredients"></span>
-				<span class="modal-window__drinks"></span>
-			</p>
-			<button class="modal-window__submit-btn">
-				To order
-			</button>
-		</div>
-	</div>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+  <div class="container-fluid">
+    <div class="row creator-pizza">
+      <div class="col-10">
+        <h2>Pizza constructor</h2>
+        <div class="row">
+          <div class="col-6 col-lg-3 creator-pizza-left">
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Beef
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Salami
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Becon
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Mushrooms
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Chicken
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+          </div>
+          <div class="col-6 col-lg-3 creator-pizza-right">
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Mozzarella
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Pineapple
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Pepper
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Tomato
+                <input type="checkbox"><span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="topping-item">
+              <label class="container-custom-checkbox">Olives
+                <input type="checkbox"><span class="checkmark"> </span>
+              </label>
+            </div>
+          </div>
+          <div class="col-lg-6 creator-pizza-center">
+            <div class="current-pizza">
+              <div class="current-pizza-item dough"></div>
+              <div class="current-pizza-item base"></div>
+              <div class="current-pizza-item beef"></div>
+              <div class="current-pizza-item salami"></div>
+              <div class="current-pizza-item bekon"></div>
+              <div class="current-pizza-item mushrooms"></div>
+              <div class="current-pizza-item chiken"></div>
+              <div class="current-pizza-item mozzarella"></div>
+              <div class="current-pizza-item pineapple"></div>
+              <div class="current-pizza-item pepper"></div>
+              <div class="current-pizza-item tomato"></div>
+              <div class="current-pizza-item olives"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="select-drink-wrapper">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="flex-wrapper">
+            <div class="select-drink-item" data-name="cola classic">
+              <img src="img/drinks/cola.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item active" data-name="cola zero">
+              <img src="img/drinks/cola_zero.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="sprite">
+              <img src="img/drinks/sprite.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="fanta">
+              <img src="img/drinks/fanta.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="fuzetea green">
+              <img src="img/drinks/fuzetea_green.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="fuzetea black">
+              <img src="img/drinks/fuzetea_black.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="fuzetea orange">
+              <img src="img/drinks/fuzetea_orange.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+            <div class="select-drink-item" data-name="water">
+              <img src="img/drinks/water.png">
+              <div class="volume">0.5</div>
+              <div class="summa">1.99$</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row option-delivery">
+      <div class="col-md-4 col-lg-6"></div>
+      <div class="col-md-8 col-lg-6">
+        <div class="option-delivery-right">
+          <div class="total-amount"><span class="text">You pay:</span><span class="summa">6.99$</span>
+          </div>
+          <button class="typical-btn make-an-order">Make an order</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-window none">
+    <div class="modal-window__content">
+      <p class="modal-window__subject">
+        <span class="modal-window__ingredients"></span>
+        <span class="modal-window__drinks"></span>
+      </p>
+      <button class="modal-window__submit-btn">
+        To order
+      </button>
+    </div>
+  </div>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
